crates/rome_formatter/tests/specs/prettier/js/ignore/ignore-2.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: ignore-2.js

---
# Input
```js
// #8736

function HelloWorld() {
  return (
    <div
      {...{} /*
      // @ts-ignore */ /* prettier-ignore */}
      invalidProp="HelloWorld"
    >
      test
    </div>
  );
}

a = <div {.../* prettier-ignore */b}/>
a = <div {...b/* prettier-ignore */}/>
a = <div {.../* prettier-ignore */{}}/>
a = <div {...{/* prettier-ignore */}}/>
a = <div {...{}/* prettier-ignore */}/>

```

# Output
```js
// #8736

function HelloWorld() {
  return (
    <div
      {...{} /*
      // @ts-ignore */ /* prettier-ignore */}
  invalidProp="HelloWorld"
    >
      test
    </div>
  )
}

a = <div {.../* prettier-ignore */b}/>
a = <div {...b/* prettier-ignore */}/>
a = <div {.../* prettier-ignore */{}}/>
a = <div {...{/* prettier-ignore */}}/>
a = <div {...{}/* prettier-ignore */}/>

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ ignore-2.js:5:5
  │  
5 │ ┌     <div
6 │ │       {...{} /*
7 │ │       // @ts-ignore */ /* rome-ignore format: prettier ignore */}
  │ └─────────────────────────────────────────────────────────────────^ TypeScript only syntax

error[SyntaxError]: expected `')'` but instead found `invalidProp`
  ┌─ ignore-2.js:8:7
  │
8 │       invalidProp="HelloWorld"
  │       ^^^^^^^^^^^ unexpected

error: unterminated regex literal
   ┌─ ignore-2.js:11:11
   │
11 │     </div>
   │      -    ^ ...but the line ends here
   │      │    
   │      a regex literal starts there...

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ ignore-2.js:12:3
   │
12 │   );
   │   ^ Expected an expression here

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ ignore-2.js:15:5
   │
15 │ a = <div {.../* rome-ignore format: prettier ignore */b}/>
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: expected an expression but instead found '>'
   ┌─ ignore-2.js:15:58
   │
15 │ a = <div {.../* rome-ignore format: prettier ignore */b}/>
   │                                                          ^ Expected an expression here

error[SyntaxError]: Invalid assignment to `<div {.../* rome-ignore format: prettier ignore */b}/>
a`
   ┌─ ignore-2.js:15:5
   │  
15 │   a = <div {.../* rome-ignore format: prettier ignore */b}/>
   │ ┌─────^
16 │ │ a = <div {...b/* rome-ignore format: prettier ignore */}/>
   │ └─^ This expression cannot be assigned to

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ ignore-2.js:16:5
   │
16 │ a = <div {...b/* rome-ignore format: prettier ignore */}/>
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: expected an expression but instead found '>'
   ┌─ ignore-2.js:16:58
   │
16 │ a = <div {...b/* rome-ignore format: prettier ignore */}/>
   │                                                          ^ Expected an expression here

error[SyntaxError]: Invalid assignment to `<div {...b/* rome-ignore format: prettier ignore */}/>
a`
   ┌─ ignore-2.js:16:5
   │  
16 │   a = <div {...b/* rome-ignore format: prettier ignore */}/>
   │ ┌─────^
17 │ │ a = <div {.../* rome-ignore format: prettier ignore */{}}/>
   │ └─^ This expression cannot be assigned to

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ ignore-2.js:17:5
   │
17 │ a = <div {.../* rome-ignore format: prettier ignore */{}}/>
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: expected an expression but instead found '>'
   ┌─ ignore-2.js:17:59
   │
17 │ a = <div {.../* rome-ignore format: prettier ignore */{}}/>
   │                                                           ^ Expected an expression here

error[SyntaxError]: Invalid assignment to `<div {.../* rome-ignore format: prettier ignore */{}}/>
a`
   ┌─ ignore-2.js:17:5
   │  
17 │   a = <div {.../* rome-ignore format: prettier ignore */{}}/>
   │ ┌─────^
18 │ │ a = <div {...{/* rome-ignore format: prettier ignore */}}/>
   │ └─^ This expression cannot be assigned to

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ ignore-2.js:18:5
   │
18 │ a = <div {...{/* rome-ignore format: prettier ignore */}}/>
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: expected an expression but instead found '>'
   ┌─ ignore-2.js:18:59
   │
18 │ a = <div {...{/* rome-ignore format: prettier ignore */}}/>
   │                                                           ^ Expected an expression here

error[SyntaxError]: Invalid assignment to `<div {...{/* rome-ignore format: prettier ignore */}}/>
a`
   ┌─ ignore-2.js:18:5
   │  
18 │   a = <div {...{/* rome-ignore format: prettier ignore */}}/>
   │ ┌─────^
19 │ │ a = <div {...{}/* rome-ignore format: prettier ignore */}/>
   │ └─^ This expression cannot be assigned to

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ ignore-2.js:19:5
   │
19 │ a = <div {...{}/* rome-ignore format: prettier ignore */}/>
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: expected an expression but instead found '>'
   ┌─ ignore-2.js:19:59
   │
19 │ a = <div {...{}/* rome-ignore format: prettier ignore */}/>
   │                                                           ^ Expected an expression here

error[SyntaxError]: expected an expression but instead found ''
   ┌─ ignore-2.js:20:1
   │
20 │ 
   │ ^ Expected an expression here


```


